# cmake-juce

./: CMakeLists.txt  README.md
cmake/: juce_linux.cmake  juce_osx.cmake  juce_win32.cmake
